clusters/misaki/longhorn/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.svc.misaki.ebadfd.tech`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port:
            number: 80
  tls:
    secretName: longhorn-svc-misaki-ebadfd-tech-tls
